# mcp-distill

./: .gitignore  Cargo.toml  README.md
docs/: FORMAT.md
examples/: storage_bench.rs
src/: exporters.rs  install.rs  lib.rs  main.rs  schema.rs  server.rs  storage.rs
src/adapters/: claude.rs  codex.rs  mod.rs
tests/: e2e_codex.rs  roundtrip.rs
