[package]
name = "mcp-distill"
version = "0.1.0"
edition = "2021"
description = "MCP server that records prompts/context/responses from Claude and Codex for small-model distillation."
license = "MIT"
repository = "https://github.com/madeye/mcp-distill"

[[bin]]
name = "mcp-distill"
path = "src/main.rs"

[lib]
name = "mcp_distill"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5"
parking_lot = "0.12"
rmcp = { version = "0.2", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync"] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
